After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 712333 - regression: videoflip: aborts with gst_video_flip_transform_caps: code should not be reached
regression: videoflip: aborts with gst_video_flip_transform_caps: code should...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
1.x
Other Linux
: Normal blocker
: 1.3.1
Assigned To: Nicolas Dufresne (ndufresne)
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-11-14 20:03 UTC by Stirling Westrup
Modified: 2013-11-25 19:07 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Stirling Westrup 2013-11-14 20:03:11 UTC
This is definitely a regression as I was testing a script that has worked fine in the past. With a bit of cutting, I got the offending command down to this:

gst-launch-1.0 videotestsrc pattern=18 ! "video/x-raw,width=4096,height=2304" ! videoflip ! fakesink

As usual, if anyone needs traces or log files, I can oblige.
Comment 1 Sebastian Dröge (slomo) 2013-11-25 15:26:23 UTC
Caused by this change:

commit ed77b22f2b5dc05caad844f6c35a815aed1ce863
Author: Nicolas Dufresne <nicolas.dufresne@collabora.com>
Date:   Thu Oct 3 16:39:26 2013 -0400

    videoflip: Add automatic flip mode driven by image-orientation tag
    
    https://bugzilla.gnome.org/show_bug.cgi?id=709312
Comment 2 Nicolas Dufresne (ndufresne) 2013-11-25 18:41:42 UTC
I'll fix, should have never happened, sorry.
Comment 3 Nicolas Dufresne (ndufresne) 2013-11-25 19:07:19 UTC
commit c42bc9efa083913fa3f9f30de3e79ded57cdd731
Author: Nicolas Dufresne <nicolas.dufresne@collabora.com>
Date:   Mon Nov 25 14:03:21 2013 -0500

    videoflip: Set default method at contruction
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=712333