videoflip: Set default method at contruction

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=712333